--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@ button:hover {
   font-family: 'Quicksand', sans-serif;
 }
 
-.nightmode p {
+.nightmode .p {
   font-family: 'Quicksand', sans-serif;
   color: lightgray
 }
